2001-02-09  Akim Demaille  <akim@epita.fr>

	* automake.in (&transform): Use `my', not `local'.
	(&transform_cond): New.
	(&get_object_extension, &handle_texinfo, &handle_tags)
	(&handle_dist_worker, &handle_dist, &add_depend2, &handle_clean)
	(&handle_tests_dejagnu): Use it.
	* texinfos.am, lisp.am, header.am, dist.am, distdir.am, depend2.am
	* dejagnu.am, data.am, clean.am: Adjust to the new syntax.

2001-02-09  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes, and modernization of
	Perl constructs.
	(&backname): New.
	(&handle_configure, define_standard_variables): Use it.

	
2001-02-08  Tom Tromey  <tromey@redhat.com>

	* automake.in (file_contents): Only add $actions if any are
	found.  Fixes new failure in pr87.test.

2001-02-08  Pavel Roskin  <proski@gnu.org>

	* tests/pr87.test: Check foo/Makfile.in after it is created.

2001-02-08  Tom Tromey  <tromey@redhat.com>

	* tests/pr87.test: Added check for blank line after `.c.o' rule.
	Report from Lars J. Aas.

2001-02-07  Lars J. Aas <larsa@sim.no>

	* lisp.am (install-@DIR@LISP): Removed extra space.
	* header.am (install-@DIR@HEADERS): Removed extra space.
	* data.am (install-@DIR@DATA): Removed extra space.

2001-02-07  Tom Tromey  <tromey@redhat.com>

	* m4/init.m4 (AM_INIT_AUTOMAKE): Use \", not ".

	* automake.in (handle_dependencies): Use _am_include, not
	AMINCLUDE.
	* tests/exsource.test: Use _am_include, not AMINCLUDE.
	* m4/make.m4 (AM_MAKE_INCLUDE): Use _am_include, not AMINCLUDE.

	* tests/Makefile.am (XFAIL_TESTS): Removed distcommon.test.

	* tests/Makefile.am (EXTRA_DIST): Added ChangeLog-old.

	* automake.in (handle_configure): Handle case where output file is
	in subdir with no Makefile of its own.  Fixes remake3.test,
	distcommon.test.

2001-02-06  Pavel Roskin  <proski@gnu.org>

	* automake.in (handle_dependencies): Rename AM_INCLUDE to
	AMINCLUDE.
	* m4/make.m4 (AM_MAKE_INCLUDE): Likewise.
	* tests/exsource.test: Likewise.
