@@ -6993,12 +6993,6 @@ sub file_contents
 		}
 	    }
  	}
- 	elsif (/$RULE_PATTERN/mso)
- 	{
- 	    $result_rules .= "$comment$separator$_\n"
-	      unless defined $contents{$1};
- 	    $comment = $separator = '';
- 	}
  	elsif (/$MACRO_PATTERN/mso)
  	{
  	    $result_vars .= "$comment$separator$_\n"
