@@ -1,5 +1,9 @@
 2001-02-09  Akim Demaille  <akim@epita.fr>
 
+	* automake.in (&file_contents): Remove a dead branch.
+	
+2001-02-09  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&transform): Use `my', not `local'.
 	(&transform_cond): New.
 	(&get_object_extension, &handle_texinfo, &handle_tags)
@@ -15,7 +19,6 @@
 	(&backname): New.
 	(&handle_configure, define_standard_variables): Use it.
 
-	
 2001-02-08  Tom Tromey  <tromey@redhat.com>
 
 	* automake.in (file_contents): Only add $actions if any are
